--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           <img src="images/logo.svg" alt="TealuxE">
         </a>
         <nav class="menu">
+          <button class="menu__btn" type="button">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <ul class="menu__list">
             <li class="menu__item"><a href="#" class="menu__link">Black</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Green</a></li>
