--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <div class="overlay"></div>
   <!-- === HEADER === -->
   <header class="header">
     <div class="container">
@@ -32,11 +32,40 @@
             <span></span>
           </button>
           <ul class="menu__list">
+            <li class="menu__close">
+              <button class="menu__close-btn" type="button">
+                <img src="images/close.svg" alt="">
+              </button>              
+            </li>
             <li class="menu__item"><a href="#" class="menu__link">Black</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Green</a></li>
             <li class="menu__item"><a href="#" class="menu__link">White</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Oolong</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Pu-erh</a></li>
+            <li class="mobile-nav">
+              <ul class="mobile-menu">
+                <li class="mobile-menu__item">
+                  <a href="" class="mobile__menu-link">Contact Us</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="" class="mobile__menu-link">Our Blog</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="" class="mobile__menu-link">Shipping and Delivery</a>
+                </li>
+              </ul>
+              <ul class="mobile-actions">
+                <li class="mobile-actions__item">
+                  <a href="#" class="mobile-actions__link"><img src="images/cart.svg" alt="cart"></a>
+                </li>
+                <li class="mobile-actions__item">
+                  <a href="#" class="mobile-actions__link"><img src="images/user.svg" alt="user"></a>
+                </li>
+                <li class="mobile-actions__item">
+                  <a href="#" class="mobile-actions__link"><img src="images/search.svg" alt="search"></a>
+                </li>
+              </ul>
+            </li>
           </ul>
         </nav>
         <ul class="user-actions">
@@ -77,6 +106,173 @@
         "Tea is not just a drink, it's a way of life and a way to connect with our loved ones."
       </p>
     </blockquote>
+    <!-- === ASSORTMENT === -->
+     <section class="assortment">
+      <div class="container">
+        <h2 class="assortment__title title">Explore our Collections</h2>
+        <ul class="assortment__list">
+          <li class="assortment__item">
+            <img src="images/black.png" alt="black" class="assortment__img">
+            <p class="assortment__name">Black</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/green.png" alt="green" class="assortment__img">
+            <p class="assortment__name">Green</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/white.png" alt="white" class="assortment__img">
+            <p class="assortment__name">White</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/oolong.png" alt="oolong" class="assortment__img">
+            <p class="assortment__name">Oolong</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/pu-erh.png" alt="pu-erh" class="assortment__img">
+            <p class="assortment__name">Pu-erh</p>
+          </li>
+        </ul>
+      </div>
+     </section>
+     <!-- === REVIEWS === -->
+      <section class="reviews">
+        <div class="container">        
+          <h2 class="title">What our Clients say</h2>
+          <ul class="reviews__list">
+            <li class="reviews__item">
+              <blockquote>
+                <p class="reviews__text">
+                  "As a tea enthusiast, I have tried teas from all over the world, but this tea store truly stands out. Their teas are of the highest quality and the variety is impressive. This is definitely a tea store that every tea lover should visit."
+                </p>
+                <cite class="reviews__name">Alice</cite>
+              </blockquote>
+            </li>
+            <li class="reviews__item">
+              <blockquote>
+                <p class="reviews__text">
+                  "This tea store is my go-to for all my tea needs. Their selection is unbeatable and the quality of their teas is exceptional."
+                </p>
+                <cite class="reviews__name">Mad-Hatter</cite>
+              </blockquote>
+            </li>
+            <li class="reviews__item">
+              <blockquote>
+                <p class="reviews__text">
+                  "If you're a tea lover, you must visit this tea store. The selection is vast and the quality is outstanding. I guarantee you won't be disappointed."
+                </p>
+                <cite class="reviews__name">Dormouse</cite>
+              </blockquote>
+            </li>
+            <li class="reviews__item">
+              <blockquote>
+                <p class="reviews__text">
+                  "I am not a big tea drinker, but this tea store has converted me. I highly recommend this tea store to anyone looking for a high-quality tea experience."
+                </p>
+                <cite class="reviews__name">March Hare</cite>
+              </blockquote>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- === BLOG === -->
+      <section class="blog">
+        <div class="container">
+          <h2 class="title blog__title">Our Tea Blog</h2>
+          <ul class="blog__list">
+            <li class="blog__item">
+              <img class="blog__item-img" src="images/blog-1.jpg" alt="blog-1">
+              <div class="blog__content">
+                <h3 class="blog__item-title">
+                  Tea Time Travels: Funny Moments from Around the World
+                </h3>
+                <a class="blog__item-autor" href="#">by Robinson Crusoe</a>
+                <a class="blog__item-link" href="#">Read</a>
+              </div>
+            </li>
+            <li class="blog__item">
+              <img class="blog__item-img" src="images/blog-2.jpg" alt="blog-2">
+              <div class="blog__content">
+                <h3 class="blog__item-title">
+                  The Role of Tea in Mental Health
+                </h3>
+                <a class="blog__item-autor" href="#">by Joker</a>
+                <a class="blog__item-link" href="#">Read</a>
+              </div>
+            </li>
+            <li class="blog__item">
+              <img class="blog__item-img" src="images/blog-3.jpg" alt="blog-3">
+              <div class="blog__content">
+                <h3 class="blog__item-title">
+                  Tea-rific Tales: Hilarious Stories from Tea Lovers
+                </h3>
+                <a class="blog__item-autor" href="#">by Casper the Friendly Ghost</a>
+                <a class="blog__item-link" href="#">Read</a>
+              </div>
+            </li>
+            <li class="blog__item">
+              <img class="blog__item-img" src="images/blog-4.jpg" alt="blog-4">
+              <div class="blog__content">
+                <h3 class="blog__item-title">
+                  Tea and Caffeine: Effects on the Brain and Behavior
+                </h3>
+                <a class="blog__item-autor" href="#">by Author Authorius</a>
+                <a class="blog__item-link" href="#">Read</a>
+              </div>
+            </li>
+          </ul>
+          <a href="#" class="blog__link">View all</a>
+        </div>
+      </section>
+      <!-- === MAILING === -->
+       <section class="mailing-list">
+        <div class="container">
+          <h2 class="title mailing__title">Want to know more?</h2>
+          <div class="mailing-list__inner">
+            <p class="mailing-list__text">
+              Join our mailing list and stay up-to-date with the latest news, promotions, and exclusive offers from our tea store. Be the first to know about new tea arrivals, seasonal blends, and special discounts. Don't miss out on the tea-rrific perks - sign up today!
+            </p>
+            <form class="mailing-list__form">
+              <input class="mailing-list__email" type="email" name="" id="" placeholder="name@email.com">
+              <button class="mailing-list__btn" type="submit">Join</button>
+              <label class="mailing-list__label">
+                <input class="checkbox" type="checkbox">
+                <span class="checkbox-style"></span>
+                <p class="checkbox__text">
+                  We take your privacy seriously and are committed to protecting your personal information. By subscribing to our mailing list, you are consenting to receive periodic emails from us about our products, promotions, and other tea-related information.
+                </p>
+              </label>
+            </form>
+          </div>
+        </div>
+       </section>
+       <!-- === PRIORITISE === -->
+        <section class="prioritise">
+          <div class="container">
+            <h2 class="title prioritise__main-title">We Prioritise</h2>
+            <ul class="prioritise__list">
+              <li class="prioritise__item">
+                <h4 class="prioritise__title">Single garden teas</h4>
+                <p class="prioritise__text">Complete transparency</p>
+                <img src="images/prioritise-1.svg" alt="">
+              </li>
+              <li class="prioritise__item">
+                <h4 class="prioritise__title">Only Loose leaf tea</h4>
+                <p class="prioritise__text">Best Drinking Experience</p>
+                <img src="images/prioritise-2.svg" alt="">
+              </li>
+              <li class="prioritise__item">
+                <h4 class="prioritise__title">Customer support</h4>
+                <p class="prioritise__text">No bots, no automated replies</p>
+                <img src="images/prioritise-3.svg" alt="">
+              </li>
+              <li class="prioritise__item">
+                <h4 class="prioritise__title">Fast shipping</h4>
+                <p class="prioritise__text">Save, Convenient, Reliable</p>
+                <img src="images/prioritise-4.svg" alt="">
+              </li>
+            </ul>
+          </div>
+        </section>
   </main>
 
   <script src="js/main.js"></script>
