--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="overlay"></div>
   <!-- === HEADER === -->
+  <div class="wrapper">
   <header class="header">
+    <div class="overlay"></div>
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="#">
@@ -88,6 +89,7 @@
       </div>
     </div>
   </header>
+  <!-- === MAIN === -->
   <main class="main">
     <section class="top">
       <div class="container">
@@ -274,7 +276,114 @@
           </div>
         </section>
   </main>
-
+  <!-- === FOOTER === -->
+   <footer class="footer">
+    <div class="container">
+      <div class="footer__top">
+        <ul class="footer__products">
+          <li class="footer__products-title">Products</li>
+          <li class="footer__products-item">
+            <a href="#" class="footer__products-link">Black tea</a>
+          </li>
+          <li class="footer__products-item">
+            <a href="#" class="footer__products-link">Green tea</a>
+          </li>
+          <li class="footer__products-item">
+            <a href="#" class="footer__products-link">White tea</a>
+          </li>
+          <li class="footer__products-item">
+            <a href="#" class="footer__products-link">Oolong tea</a>
+          </li>
+          <li class="footer__products-item">
+            <a href="#" class="footer__products-link">Pu-erh tea</a>
+          </li>
+        </ul>
+        <ul class="footer__company">
+          <li class="footer__company-title">Company</li>
+          <li class="footer__company-item">
+            <a href="#" class="footer__company-link">About Us</a>
+          </li>
+          <li class="footer__company-item">
+            <a href="#" class="footer__company-link">Contact Us</a>
+          </li>
+          <li class="footer__products-item">
+            <a href="#" class="footer__company-link">Our Blog</a>
+          </li>
+          <li class="footer__company-item">
+            <a href="#" class="footer__company-link">FAQ</a>
+          </li>
+          <li class="footer__company-item">
+            <a href="#" class="footer__company-link">Shipping & Delivery</a>
+          </li>
+          <li class="footer__company-item">
+            <a href="#" class="footer__company-link">Refund policy</a>
+          </li>
+          <li class="footer__company-item">
+            <a href="#" class="footer__company-link">Terms of Service</a>
+          </li>
+        </ul>
+        <blockquote class="footer__blockquote">
+          <p class="footer__blockquote-text">
+            “Tea is a journey. It can take you to new places and open your mind to new experiences. Let every sip transport you to a world of wonder and possibility”
+          </p>
+          <cite class="footer__blockquote-author">Dragomir Teodorescu, 
+            <span>Tealuxe owner</span>
+          </cite>
+        </blockquote> 
+        <div class="footer__contacts">
+          <h5 class="footer__contacts-title">Stay In Touch</h5>
+          <p class="footer__contacts-text">
+            Please feel free to contact us via the email of phone. We would be happy to hear from you!
+          </p>
+          <ul class="footer__nav">
+            <li class="footer__nav-logo">
+              <a class="footer__logo" href="">
+                <img src="images/logo.svg" alt="">
+              </a>
+            </li>
+            <li class="footer__nav-contacts">
+              <a class="footer__nav-phone" href="tel:3904835930499">+390 483 5930499</a>
+              <a class="footer__nav-email" href="mailto:info@poshta.com">info@poshta.com</a>
+            </li>
+            <li class="footer__social">
+              <ul class="footer__social-list">
+                <li class="footer__social-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="images/facebook.svg" alt="facebook">
+                  </a>
+                </li>
+                <li class="footer__social-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="images/youtube.svg" alt="youtube">
+                  </a>
+                </li>
+                <li class="footer__social-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="images/instagram.svg" alt="instagram">
+                  </a>
+                </li>
+                <li class="footer__social-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="images/twitter.svg" alt="twitter">
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>          
+        </div>        
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copy">© Tealuxe, 2023</p>
+        <ul class="partners-logo">
+          <li class="partners-logo__item"><img class="master" src="images/partners-1.png" alt="partners-1"></li>
+          <li class="partners-logo__item"><img src="images/partners-2.png" alt="partners-2"></li>
+          <li class="partners-logo__item"><img src="images/partners-3.png" alt="partners-3"></li>
+          <li class="partners-logo__item"><img src="images/partners-4.png" alt="partners-4"></li>
+        </ul>
+      </div>
+    </div>
+   </footer>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
